--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "express": "^4.10.0",
-    "express-handlebars": "^1.1.0"
+    "express-handlebars": "^1.1.0",
+    "mysql": "^2.5.2"
   }
 }
